--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .super{
     height: 100vh;
     width: 100%;
-    background-image: url(https://photos.google.com/search/_tra_/photo/AF1QipPwZmzSCbWC1KWmHdgpHRMS31ilL8mg3BMzlAJJ);
+    background-image: url(../img01.jpg);
     background-size: cover;
     background-position: center;
 }
